# adk

./: CMakeLists.txt  README.md
include/adk/: adk_ecs.hpp  adk_image.hpp  adk_reflect.hpp  adk_serialize.hpp
